rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__custom_granularities__rolling_sum_with_half_year_query_granularity.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/custom_granularities.rs
expression: result
---
orders__created_at_half_year | orders__rolling_sum_7d
-----------------------------+-----------------------
2024-01-01 00:00:00          | NULL                  
2024-07-01 00:00:00          | NULL                  
2025-01-01 00:00:00          | NULL                  
2025-07-01 00:00:00          | NULL
