rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__custom_granularities__to_date_custom_fiscal_year.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/custom_granularities.rs
expression: result
---
orders__created_at_day | orders__rolling_sum_to_date_fiscal_year
-----------------------+----------------------------------------
2024-01-01 00:00:00    | NULL                                   
2024-01-02 00:00:00    | NULL                                   
2024-01-03 00:00:00    | NULL                                   
2024-01-04 00:00:00    | NULL                                   
2024-01-05 00:00:00    | NULL                                   
2024-01-06 00:00:00    | NULL                                   
2024-01-07 00:00:00    | NULL                                   
2024-01-08 00:00:00    | NULL                                   
2024-01-09 00:00:00    | NULL                                   
2024-01-10 00:00:00    | NULL                                   
2024-01-11 00:00:00    | NULL                                   
2024-01-12 00:00:00    | NULL                                   
2024-01-13 00:00:00    | NULL                                   
2024-01-14 00:00:00    | NULL                                   
2024-01-15 00:00:00    | 10.00                                  
2024-01-16 00:00:00    | 10.00                                  
2024-01-17 00:00:00    | 10.00                                  
2024-01-18 00:00:00    | 10.00                                  
2024-01-19 00:00:00    | 10.00                                  
2024-01-20 00:00:00    | 10.00                                  
2024-01-21 00:00:00    | 10.00                                  
2024-01-22 00:00:00    | 10.00                                  
2024-01-23 00:00:00    | 10.00                                  
2024-01-24 00:00:00    | 10.00                                  
2024-01-25 00:00:00    | 10.00                                  
2024-01-26 00:00:00    | 10.00                                  
2024-01-27 00:00:00    | 10.00                                  
2024-01-28 00:00:00    | 10.00                                  
2024-01-29 00:00:00    | 10.00                                  
2024-01-30 00:00:00    | 10.00                                  
2024-01-31 00:00:00    | 10.00                                  
2024-02-01 00:00:00    | 10.00                                  
2024-02-02 00:00:00    | 10.00                                  
2024-02-03 00:00:00    | 10.00                                  
2024-02-04 00:00:00    | 10.00                                  
2024-02-05 00:00:00    | 10.00                                  
2024-02-06 00:00:00    | 10.00                                  
2024-02-07 00:00:00    | 10.00                                  
2024-02-08 00:00:00    | 10.00                                  
2024-02-09 00:00:00    | 10.00                                  
2024-02-10 00:00:00    | 30.00                                  
2024-02-11 00:00:00    | 30.00                                  
2024-02-12 00:00:00    | 30.00                                  
2024-02-13 00:00:00    | 30.00                                  
2024-02-14 00:00:00    | 30.00                                  
2024-02-15 00:00:00    | 30.00                                  
2024-02-16 00:00:00    | 30.00                                  
2024-02-17 00:00:00    | 30.00                                  
2024-02-18 00:00:00    | 30.00                                  
2024-02-19 00:00:00    | 30.00                                  
2024-02-20 00:00:00    | 30.00                                  
2024-02-21 00:00:00    | 30.00                                  
2024-02-22 00:00:00    | 30.00                                  
2024-02-23 00:00:00    | 30.00                                  
2024-02-24 00:00:00    | 30.00                                  
2024-02-25 00:00:00    | 30.00                                  
2024-02-26 00:00:00    | 30.00                                  
2024-02-27 00:00:00    | 30.00                                  
2024-02-28 00:00:00    | 30.00                                  
2024-02-29 00:00:00    | 30.00                                  
2024-03-01 00:00:00    | 30.00                                  
2024-03-02 00:00:00    | 30.00                                  
2024-03-03 00:00:00    | 30.00                                  
2024-03-04 00:00:00    | 30.00                                  
2024-03-05 00:00:00    | 30.00                                  
2024-03-06 00:00:00    | 30.00                                  
2024-03-07 00:00:00    | 30.00                                  
2024-03-08 00:00:00    | 30.00                                  
2024-03-09 00:00:00    | 30.00                                  
2024-03-10 00:00:00    | 30.00                                  
2024-03-11 00:00:00    | 30.00                                  
2024-03-12 00:00:00    | 30.00                                  
2024-03-13 00:00:00    | 30.00                                  
2024-03-14 00:00:00    | 30.00                                  
2024-03-15 00:00:00    | 30.00                                  
2024-03-16 00:00:00    | 30.00                                  
2024-03-17 00:00:00    | 30.00                                  
2024-03-18 00:00:00    | 30.00                                  
2024-03-19 00:00:00    | 30.00                                  
2024-03-20 00:00:00    | 60.00                                  
2024-03-21 00:00:00    | 60.00                                  
2024-03-22 00:00:00    | 60.00                                  
2024-03-23 00:00:00    | 60.00                                  
2024-03-24 00:00:00    | 60.00                                  
2024-03-25 00:00:00    | 60.00                                  
2024-03-26 00:00:00    | 60.00                                  
2024-03-27 00:00:00    | 60.00                                  
2024-03-28 00:00:00    | 60.00                                  
2024-03-29 00:00:00    | 60.00                                  
2024-03-30 00:00:00    | 60.00                                  
2024-03-31 00:00:00    | 60.00                                  
2024-04-01 00:00:00    | NULL                                   
2024-04-02 00:00:00    | NULL                                   
2024-04-03 00:00:00    | NULL                                   
2024-04-04 00:00:00    | NULL                                   
2024-04-05 00:00:00    | NULL                                   
2024-04-06 00:00:00    | NULL                                   
2024-04-07 00:00:00    | NULL                                   
2024-04-08 00:00:00    | NULL                                   
2024-04-09 00:00:00    | NULL                                   
2024-04-10 00:00:00    | NULL                                   
2024-04-11 00:00:00    | NULL                                   
2024-04-12 00:00:00    | NULL                                   
2024-04-13 00:00:00    | NULL                                   
2024-04-14 00:00:00    | NULL                                   
2024-04-15 00:00:00    | NULL                                   
2024-04-16 00:00:00    | NULL                                   
2024-04-17 00:00:00    | NULL                                   
2024-04-18 00:00:00    | NULL                                   
2024-04-19 00:00:00    | NULL                                   
2024-04-20 00:00:00    | NULL                                   
2024-04-21 00:00:00    | NULL                                   
2024-04-22 00:00:00    | NULL                                   
2024-04-23 00:00:00    | NULL                                   
2024-04-24 00:00:00    | NULL                                   
2024-04-25 00:00:00    | NULL                                   
2024-04-26 00:00:00    | NULL                                   
2024-04-27 00:00:00    | NULL                                   
2024-04-28 00:00:00    | NULL                                   
2024-04-29 00:00:00    | NULL                                   
2024-04-30 00:00:00    | NULL                                   
2024-05-01 00:00:00    | 40.00                                  
2024-05-02 00:00:00    | 40.00                                  
2024-05-03 00:00:00    | 40.00                                  
2024-05-04 00:00:00    | 40.00                                  
2024-05-05 00:00:00    | 40.00                                  
2024-05-06 00:00:00    | 40.00                                  
2024-05-07 00:00:00    | 40.00                                  
2024-05-08 00:00:00    | 40.00                                  
2024-05-09 00:00:00    | 40.00                                  
2024-05-10 00:00:00    | 40.00                                  
2024-05-11 00:00:00    | 40.00                                  
2024-05-12 00:00:00    | 40.00                                  
2024-05-13 00:00:00    | 40.00                                  
2024-05-14 00:00:00    | 40.00                                  
2024-05-15 00:00:00    | 40.00                                  
2024-05-16 00:00:00    | 40.00                                  
2024-05-17 00:00:00    | 40.00                                  
2024-05-18 00:00:00    | 40.00                                  
2024-05-19 00:00:00    | 40.00                                  
2024-05-20 00:00:00    | 40.00                                  
2024-05-21 00:00:00    | 40.00                                  
2024-05-22 00:00:00    | 40.00                                  
2024-05-23 00:00:00    | 40.00                                  
2024-05-24 00:00:00    | 40.00                                  
2024-05-25 00:00:00    | 40.00                                  
2024-05-26 00:00:00    | 40.00                                  
2024-05-27 00:00:00    | 40.00                                  
2024-05-28 00:00:00    | 40.00                                  
2024-05-29 00:00:00    | 40.00                                  
2024-05-30 00:00:00    | 40.00                                  
2024-05-31 00:00:00    | 40.00                                  
2024-06-01 00:00:00    | 40.00                                  
2024-06-02 00:00:00    | 40.00                                  
2024-06-03 00:00:00    | 40.00                                  
2024-06-04 00:00:00    | 40.00                                  
2024-06-05 00:00:00    | 40.00                                  
2024-06-06 00:00:00    | 40.00                                  
2024-06-07 00:00:00    | 40.00                                  
2024-06-08 00:00:00    | 40.00                                  
2024-06-09 00:00:00    | 40.00                                  
2024-06-10 00:00:00    | 40.00                                  
2024-06-11 00:00:00    | 40.00                                  
2024-06-12 00:00:00    | 40.00                                  
2024-06-13 00:00:00    | 40.00                                  
2024-06-14 00:00:00    | 40.00                                  
2024-06-15 00:00:00    | 90.00                                  
2024-06-16 00:00:00    | 90.00                                  
2024-06-17 00:00:00    | 90.00                                  
2024-06-18 00:00:00    | 90.00                                  
2024-06-19 00:00:00    | 90.00                                  
2024-06-20 00:00:00    | 90.00                                  
2024-06-21 00:00:00    | 90.00                                  
2024-06-22 00:00:00    | 90.00                                  
2024-06-23 00:00:00    | 90.00                                  
2024-06-24 00:00:00    | 90.00                                  
2024-06-25 00:00:00    | 90.00                                  
2024-06-26 00:00:00    | 90.00                                  
2024-06-27 00:00:00    | 90.00                                  
2024-06-28 00:00:00    | 90.00                                  
2024-06-29 00:00:00    | 90.00                                  
2024-06-30 00:00:00    | 90.00
