rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__custom_granularities__to_date_custom_fiscal_year_with_month_granularity.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/custom_granularities.rs
expression: result
---
orders__created_at_month | orders__rolling_sum_to_date_fiscal_year
-------------------------+----------------------------------------
2024-01-01 00:00:00      | 10.00                                  
2024-02-01 00:00:00      | 30.00                                  
2024-03-01 00:00:00      | 60.00                                  
2024-04-01 00:00:00      | NULL                                   
2024-05-01 00:00:00      | 40.00                                  
2024-06-01 00:00:00      | 90.00                                  
2024-07-01 00:00:00      | 90.00                                  
2024-08-01 00:00:00      | 150.00                                 
2024-09-01 00:00:00      | 220.00                                 
2024-10-01 00:00:00      | 300.00                                 
2024-11-01 00:00:00      | 390.00                                 
2024-12-01 00:00:00      | 490.00                                 
2025-01-01 00:00:00      | 600.00                                 
2025-02-01 00:00:00      | 600.00                                 
2025-03-01 00:00:00      | 600.00                                 
2025-04-01 00:00:00      | 120.00                                 
2025-05-01 00:00:00      | 120.00                                 
2025-06-01 00:00:00      | 120.00                                 
2025-07-01 00:00:00      | 250.00                                 
2025-08-01 00:00:00      | 250.00                                 
2025-09-01 00:00:00      | 390.00                                 
2025-10-01 00:00:00      | 390.00                                 
2025-11-01 00:00:00      | 540.00                                 
2025-12-01 00:00:00      | 540.00
